--- a/bundle/command-t/ruby/command-t/Makefile
+++ b/bundle/command-t/ruby/command-t/Makefile
@@ -4,38 +4,38 @@ SHELL = /bin/sh
 #### Start of system configuration section. ####
 
 srcdir = .
-topdir = /usr/lib/ruby/1.8/i486-linux
+topdir = /usr/lib/ruby/1.8/i686-linux
 hdrdir = $(topdir)
 VPATH = $(srcdir):$(topdir):$(hdrdir)
 prefix = $(DESTDIR)/usr
 exec_prefix = $(prefix)
-localstatedir = $(DESTDIR)/var
-includedir = $(prefix)/include
-psdir = $(docdir)
+sitedir = $(DESTDIR)/usr/local/lib/site_ruby
 pdfdir = $(docdir)
-mandir = $(prefix)/share/man
-sitelibdir = $(sitedir)/$(ruby_version)
-datadir = $(datarootdir)
-oldincludedir = $(DESTDIR)/usr/include
-vendordir = $(libdir)/ruby/vendor_ruby
 datarootdir = $(prefix)/share
-sitearchdir = $(sitelibdir)/$(sitearch)
-vendorarchdir = $(vendorlibdir)/$(sitearch)
 archdir = $(rubylibdir)/$(arch)
 sbindir = $(exec_prefix)/sbin
-sharedstatedir = $(prefix)/com
-libdir = $(exec_prefix)/lib
-vendorlibdir = $(vendordir)/$(ruby_version)
-libexecdir = $(prefix)/lib/ruby1.8
-infodir = $(prefix)/share/info
-docdir = $(datarootdir)/doc/$(PACKAGE)
-sysconfdir = $(DESTDIR)/etc
-localedir = $(datarootdir)/locale
-htmldir = $(docdir)
-bindir = $(exec_prefix)/bin
-sitedir = $(DESTDIR)/usr/local/lib/site_ruby
-dvidir = $(docdir)
 rubylibdir = $(libdir)/ruby/$(ruby_version)
+datadir = $(datarootdir)
+infodir = $(prefix)/share/info
+localedir = $(datarootdir)/locale
+includedir = $(prefix)/include
+docdir = $(datarootdir)/doc/$(PACKAGE)
+htmldir = $(docdir)
+vendorlibdir = $(vendordir)/$(ruby_version)
+sharedstatedir = $(prefix)/com
+vendorarchdir = $(vendorlibdir)/$(sitearch)
+libdir = $(exec_prefix)/lib
+mandir = $(prefix)/share/man
+sysconfdir = $(DESTDIR)/etc
+psdir = $(docdir)
+sitearchdir = $(sitelibdir)/$(sitearch)
+sitelibdir = $(sitedir)/$(ruby_version)
+localstatedir = $(DESTDIR)/var
+oldincludedir = $(DESTDIR)/usr/include
+vendordir = $(libdir)/ruby/vendor_ruby
+dvidir = $(docdir)
+libexecdir = $(prefix)/lib/ruby1.8
+bindir = $(exec_prefix)/bin
 
 CC = gcc
 LIBRUBY = $(LIBRUBY_SO)
@@ -59,8 +59,8 @@ EXEEXT =
 
 RUBY_INSTALL_NAME = ruby1.8
 RUBY_SO_NAME = ruby1.8
-arch = i486-linux
-sitearch = i486-linux
+arch = i686-linux
+sitearch = i686-linux
 ruby_version = 1.8
 ruby = /usr/bin/ruby1.8
 RUBY = $(ruby)
@@ -87,8 +87,8 @@ extout_prefix =
 target_prefix = 
 LOCAL_LIBS = 
 LIBS = $(LIBRUBYARG_SHARED)  -lpthread -lrt -ldl -lcrypt -lm   -lc
-SRCS = match.c ext.c matcher.c
-OBJS = match.o ext.o matcher.o
+SRCS = ext.c matcher.c match.c
+OBJS = ext.o matcher.o match.o
 TARGET = ext
 DLLIB = $(TARGET).so
 EXTSTATIC = 
