--- a/.gitmodules
+++ b/.gitmodules
@@ -70,3 +70,6 @@
 [submodule "bundle/vim-emmet"]
 	path = bundle/vim-emmet
 	url = https://github.com/mattn/emmet-vim.git
+[submodule "bundle/vim-dash"]
+	path = bundle/vim-dash
+	url = https://github.com/rizzatti/dash.vim
